=== 3.43.0 (2013-01-08)

* Move the #meta_def support for Database, Dataset, and Model to the meta_def extension (jeremyevans)

* Fix Database#copy_into on jdbc/postgres when an exception is raised (jeremyevans)

* Add core_refinements extension, providing refinement versions of Sequel's core extensions (jeremyevans)

* Make Database#copy_into raise a DatabaseError if the database signals an error in the postgres adapter (jeremyevans)

* Define respond_to_missing? where method_missing is defined and the object supports respond_to? (jeremyevans)

* Allow lambda procs with 0 arity as virtual row blocks on ruby 1.9 (jeremyevans)

* Handle schema-qualified row_types in the pg_array integration in the pg_row extension (jeremyevans) (#595)

* Support default_schema when reseting primary key sequences on PostgreSQL (jeremyevans) (#596)

* Allow treating tinyint(1) unsigned columns as booleans in the mysql adapters (jeremyevans)

* Support the jdbc-hsqldb gem in the jdbc adapter, since it has been updated to 2.2.9 (jeremyevans)

* Work with new jdbc-* gems that require manual driver loading (kares) (#598)

* Cast blobs correctly on DB2 when use_clob_as_blob is false (mluu, jeremyevans) (#594)

* Add date_arithmetic extension for database-independent date calculations (jeremyevans)

* Make Database#schema handle [host.]database.schema.table qualified tables on Microsoft SQL Server (jeremyevans)

* Add Dataset#split_qualifiers helper method for splitting a qualifier identifier into array of strings (jeremyevans)

* Make Database#schema_and_table always return strings for the schema and table (jeremyevans)

* Skip stripping of blob columns in the string_stripper plugin (jeremyevans) (#593)

* Allow Dataset#get to take an array to return multiple values, similar to map/select_map (jeremyevans)

* Default :prefetch_rows to 100 in the Oracle adapter (andrewhr) (#592)

=== 3.42.0 (2012-12-03)
